# test

1/: .clang-format  CMakeLists.txt  README.md  Text.cpp  Text.h  main.cpp  sample.txt
1/tests/: Text_tests.cpp  Utilities_tests.cpp
3/: .clang-format  CMakeLists.txt  Doxyfile  Matrix.h  README.md  Vector.h  main.cpp  traits.h
3/tests/: .directory  CMakeLists.txt  Matrix_tests.cpp  Utilities_tests.cpp  Vector_tests.cpp  unit_main.cpp
